feat: update password and profile + auth documentation
