# src/controllers/auth.controller.ts
@@ -1,6 +1,6 @@
 import { Request, Response } from 'express';
 import * as Yup from 'yup';
-import UserModel from '../models/user.model';
+import UserModel, { userDTO, userLoginDTO, userUpdatePasswordDTO } from '../models/user.model';
 import { encrypt } from '../utils/encryption';
 import { generateToken } from '../utils/jwt';
 import { IReqUser } from '../utils/interface';
@@ -19,46 +19,68 @@ export interface TLogin {
   password: string;
 }
 
-const registerValidateSchema = Yup.object({
-  fullName: Yup.string().required(),
-  username: Yup.string().required(),
-  email: Yup.string().email().required(),
-  password: Yup.string().required().min(6, 'Password must be at least 6 characters')
-    .test(
-      'at-least-one-uppercase-letter',
-      'Contains at least one uppercase letter',
-      (value) => {
-        if (!value) return false;
-        const regex = /^(?=.*[A-Z])/;
-        return regex.test(value);
-      })
-    .test(
-      'at-least-one-number',
-      'Contains at least one number',
-      (value) => {
-        if (!value) return false;
-        const regex = /^(?=.*\d)/;
-        return regex.test(value);
-      }),
-  confirmPassword: Yup.string()
-    .required()
-    .oneOf([Yup.ref('password'), ''], 'Password not match'),
-});
-
 export default {
+  async updateProfile(req: IReqUser, res: Response) {
+    try {
+      const userId = req.user?.id;
+      const { fullName, profilePhoto } = req.body;
+      const result = await UserModel.findByIdAndUpdate(userId, {
+        fullName,
+        profilePhoto,
+      },
+        {
+          new: true,
+        }
+      );
+
+      if (!result) {
+        return response.notFound(res, 'User not found');
+      }
+
+      response.success(res, result, 'Success update profile');
+    } catch (error) {
+      response.error(res, error, 'Failed update profile');
+    }
+  },
+
+  async updatePassword(req: IReqUser, res: Response) {
+    try {
+      const userId = req.user?.id;
+      const { oldPassword, password, confirmPassword } = req.body;
+
+      await userUpdatePasswordDTO.validate({
+        oldPassword,
+        password,
+        confirmPassword,
+      })
+
+      const user = await UserModel.findById(userId);
+
+      if (!user || user.password !== encrypt(oldPassword)) {
+        return response.notFound(res, "user not found")
+      }
+
+      const result = await UserModel.findByIdAndUpdate(userId, {
+        password: encrypt(password),
+      },
+        {
+          new: true
+        }
+      )
+
+      response.success(res, result, "Success to update password")
+
+    } catch (error) {
+      response.error(res, error, 'Failed update password');
+    }
+  },
+
   async register(req: Request, res: Response) {
-    /**
-     #swagger.tags = ['Auth']
-     #swagger.requestBody{
-       required: true,
-       schema: {$ref: "#/components/schemas/RegisterRequest"}
-     }
-     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
     try {
-      await registerValidateSchema.validate({
+      await userDTO.validate({
         fullName,
         username,
         email,
@@ -81,15 +103,14 @@ export default {
   },
 
   async login(req: Request, res: Response) {
-    /**
-     #swagger.tags = ['Auth']
-     #swagger.requestBody{
-      required: true,
-      schema: {$ref: "#/components/schemas/LoginRequest"}
-     }
-     */
-    const { identifier, password } = req.body as unknown as TLogin;
+
+    const { identifier, password } = req.body;
     try {
+      await userLoginDTO.validate({
+        identifier,
+        password
+      });
+
       // get user data from identifier -> email or username
       const userByIdentifier = await UserModel.findOne({
         $or: [
