# src/models/user.model.ts
@@ -3,19 +3,49 @@ import { encrypt } from '../utils/encryption';
 import { renderMailHtml, sendMail } from '../utils/mail/mail';
 import { CLIEN_HOST, EMAIL_SMTP_USER } from '../utils/env';
 import { ROLES } from '../utils/contants';
+import * as Yup from 'yup';
+
+const validatePassword = Yup.string().required().min(8, "Password must be at least 8 characters").test(
+  "at-least-one-uppercase-letter",
+  "Contains at least one uppercase letter",
+  (value) => {
+    if (!value) return false;
+    const regex = /^(?=.*[A-Z])/;
+    return regex.test(value);
+  }
+);
+
+const validateConfirmPassword = Yup.string().required().oneOf([Yup.ref('password'), ''], 'Password not match');
 
 export const USER_MODEL_NAME = 'User';
 
-export interface User {
-  fullName: string;
-  username: string;
-  email: string;
-  password: string;
-  role: string;
-  profilePicture: string;
+export const userLoginDTO = Yup.object({
+  identifier: Yup.string().required(),
+  password: validatePassword,
+})
+
+export const userUpdatePasswordDTO = Yup.object({
+  oldPassword: validatePassword,
+  password: validatePassword,
+  confirmPassword: validateConfirmPassword
+})
+
+export const userDTO = Yup.object({
+  fullName: Yup.string().required(),
+  username: Yup.string().required().max(15, 'Must be 15 characters or less'),
+  email: Yup.string().email().required(),
+  password: validatePassword,
+  confirmPassword: validateConfirmPassword
+})
+
+export type TypeUser = Yup.InferType<typeof userDTO>;
+
+export interface User extends Omit<TypeUser, "confirmPassword"> {
   isActive: boolean;
   activationCode: string;
-  createdAt?: Date;
+  role: string;
+  profilePicture: string;
+  createdAt?: string;
 }
 
 const Schema = mongoose.Schema;
